[tool.pdm]
[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "coverage>=7.1.0",
    "pytest-cov>=4.0.0",
]
docs = ["sphinx>=6.1.3", "sphinx-autoapi>=2.0.1"]
formatting = ["black>=22.12.0", "isort>=5.12.0"]
lsp = [
    "python-lsp-server[all]>=1.7.1",
    "mypy>=1.0.0",
    "pylsp-mypy>=0.6.5",
    "pylsp-rope>=0.1.11",
]
debug = ["debugpy>=1.6.6"]

[project]
name = "metamoth"
version = "0.1.0"
description = "Simple Python utility to parse AudioMoth metadata"
authors = [
    { name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.ac.com" },
]
dependencies = []
requires-python = ">=3.8"
readme = "README.rst"
license = { text = "MIT license" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
