[tool.pdm]
[tool.pdm.dev-dependencies]
docs = [
    "sphinx>=5.3.0",
    "sphinx-autoapi>=2.0.1",
    "furo>=2022.12.7",
]
test = [
    "pytest>=7.2.2",
    "coverage>=7.2.1",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.68.2",
]
formatting = [
    "black>=23.1.0",
    "isort>=5.11.5",
]
lsp = [
    "pyright>=1.1.297",
    "python-lsp-server[all]>=1.2.1",
    "python-lsp-ruff>=1.2.1",
    "ruff>=0.0.254",
]
debug = [
    "debugpy>=1.6.6",
]

[project]
name = "metamoth"
version = "1.2.1"
description = "Simple Python utility to parse AudioMoth metadata"
authors = [
    { name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = ['dataclasses; python_version < "3.7"']
requires-python = ">=3.6"
readme = "README.rst"
license = { text = "MIT license" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 80
