[project]
name = "metamoth"
version = "1.2.2"
description = "Simple Python utility to parse AudioMoth metadata"
authors = [
    { name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.ac.uk" },
]
dependencies = []
requires-python = ">=3.7"
readme = "README.rst"
license = { text = "MIT license" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=5.3.0",
    "sphinx-autoapi>=2.0.1",
    "furo>=2022.12.7",
    "pytest>=7.2.2",
    "coverage>=7.2.1",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.68.2",
    "pyright>=1.1.297",
    "ruff>=0.0.254",
    "debugpy>=1.6.6",
]

[tool.ruff]
line-length = 79
target-version = "py37"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]
include = ["src"]
pythonVersion = "3.7"
